trying to solve the problem with the compiled css not showing changes on development env

--- a/app/assets/stylesheets/pages/index.scss
+++ b/app/assets/stylesheets/pages/index.scss
@@ -1,3 +1,3 @@
-h1 {
-  color: blue;
+.test {
+  font-size: 100px;
 }
